# Hackathon-II-Phase-III

./: .gitignore  AUTH_FIX_SUMMARY.md  AUTH_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_INTEGRATION_SUMMARY.md  LIMITATIONS.md  QUICKSTART.md  README.md  alembic.ini  clear_cache.py  create_neon_tables.py  debug_session.py  debug_sqlmodel.py  final_integration_test.py  final_test.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run_all_tests.py  run_contract_tests.py  run_tests.py  setup.cfg  simple_auth_test.py  simple_auth_test_no_emoji.py  simple_final_test.py  simple_test.py  simple_test_fixed.py  test_auth_fix.py  test_cors_signup.py  test_data_persistence.py  test_frontend_integration.py  test_jwt_handling.py  test_jwt_simple.py  test_neon_connection.py  test_passwords.py  test_rate_limiting.py  test_signup.py  update_db_schema.py  (+1 more)
.claude/agents/: auth-agent.md  backend-agent.md  database-agent.md  frontend-agent.md
.specify/memory/: constitution.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_tables.py
backend/: AI_CHAT_AGENT_IMPLEMENTATION.md  requirements.txt  test_agents.py
backend/src/: main.py
docs/: frontend-integration.md  migration-guide.md  monitoring-alerting.md  security-audit.md
frontend/: middleware.ts  package-lock.json  package.json
scripts/: check_schema_details.py  check_task_data.py  check_task_schema_final.py  check_task_table.py  fix_user_table.py  set_db_defaults.py  test_direct_insertion.py  verify_auth_logic.py  verify_tasks.py
tests/: conftest.py
(+166 files in other folders)
